crates/franken-node/tests/snapshots/lane_scheduler_golden_artifacts__golden_telemetry_snapshot_minimal_scheduler.snap
---
source: crates/franken-node/tests/lane_scheduler_golden_artifacts.rs
assertion_line: 70
expression: snapshot
---
{
  "counters": [
    {
      "lane": "Background",
      "active_count": 0,
      "queued_count": 0,
      "first_queued_at_ms": null,
      "completed_total": 1,
      "rejected_total": 0,
      "starvation_events": 0,
      "starvation_active": false,
      "last_completion_ms": 1000100
    }
  ],
  "timestamp_ms": 1000200,
  "schema_version": "ls-v1.0"
}
